@@ -6,6 +6,7 @@ Changes from v2.2.3 to v2.2.4
 - add sound compatibility option
 - shared texture palette isn't the default anymore
 - better invulnerabilty rendering for non paletted OpenGL
+- network game server can now read config files to set game options
 - small compilation fixed for OpenGL on some unix platforms
 - fix for dehacked files which change frames
 - fixed name clash when compiling for some unix platforms
